--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,22 @@ h1, h2 {
      background-color: #dbdcde; 
 }
 
+
+
+.custom-button {
+    background-color: #1f7798;
+    border:  #1f7798;
+
+
+}
+
+.custom-button:hover {
+    background-color: #1d6d8a;
+    border: #1d6d8a;
+}
+
+
+
 /* Media query */
 
 
